增加圈子,萌宠

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,67 @@
 <resources>
-    <string name="app_name">Dragon</string>
+    <string name="app_name">联萌</string>
+
+    <string name="lirc_waipo">晚风轻拂澎湖湾\n
+白浪逐沙滩\n
+没有椰林缀斜阳\n
+只是一片海蓝蓝\n
+坐在门前的矮墙上一遍遍怀（幻）想\n
+也是黄昏的沙滩上有着脚印两对半\n
+那是外婆拄着杖将我手轻轻挽\n
+踩着薄暮走向余晖暖暖的澎湖湾\n
+一个脚印是笑语一串消磨许多时光\n
+直到夜色吞没我俩在回家的路上\n
+澎湖湾 澎湖湾 外婆的澎湖湾\n
+有我许多的童年幻想\n
+阳光 沙滩 海浪 仙人掌\n
+还有一位老船长\n
+    </string>
+
+    <string name="heart_thing">
+        小朋友假日里去郊游 爬爬小山，\n
+        看看我 小心哟！小蝴蝶贴上你的衣兜\n 小快乐装进我的小竹篓 \n
+        从小就从你的手中摔落小钮扣\n 飞小风筝，我的情意 追赶小天牛 \n
+        丢掉书包，丢掉烦恼 还想擦干眼泪\n 小小脸蛋儿红彤彤又圆溜溜\n
+        好朋友一同去郊游 太阳参与乐悠悠\n 明知故问，跟着快快地走 \n
+        小朋友假日里去郊游 爬爬小山，\n看看我 小心哟！小蝴蝶贴上你的衣兜 \n
+        小快乐装进我的小竹篓</string>
+
+
+    <string name="song">
+        噔噔噔噔噔~噔噔噔噔噔~噔噔噔噔)\n
+小丸子为了什么闹情绪~小丸子的幻想世界飞往哪里去~\n
+小丸子偶尔也会撞到墙壁~小丸子偶尔对乌龟也笑嘻嘻\n
+每一棵树苗都有一个成长时期~\n
+要不要去灌溉也是看自己的努力~\n
+每一场风雨是大自然变幻的呼吸~\n
+就这么放弃怎能有结果的欢喜~\n
+大风吹不走我????~不会被??~\n
+小丸子~(噔噔噔噔)在哪里~(噔噔噔噔)快乐就在哪里~\n
+小丸子为了什么闹情绪~小丸子的幻想世界飞往哪里去~\n
+小丸子偶尔也会撞到墙壁~小丸子偶尔对乌龟也笑嘻嘻~ \n
+    </string>
+
+    <string name="end_song">
+        小小年纪谈起理想一串串\n
+想当专家、想做博士、想出唱片\n
+老爸老妈老师老友都夸赞\n
+想来容易，说来简单，做做就难\n
+要数一百，先数一二三\n
+要过明天先过好今天\n
+瞄准目标看齐\n
+噼里啪啦，噼里啪啦\n
+做事不偷懒\n
+噼里啪啦，噼里啪啦\n
+学习不怕难\n
+我们脚踏实地地干\n
+瞄准目标看齐\n
+噼里啪啦，噼里啪啦\n
+读书真勤快\n
+噼里啪啦，噼里啪啦\n
+今天学得好\n
+噼里啪啦，噼里啪啦\n
+明天理想能实现\n
+    </string>
+
+
 </resources>
